--- a/roulette.html
+++ b/roulette.html
@@ -21,7 +21,6 @@ html {
 body {
   font-family: Avenir, "Open Sans", "Helvetica Neue", Helvetica, Arial, Verdana, Roboto, "游ゴシック", "Yu Gothic", "游ゴシック体", "YuGothic", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Meiryo UI", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   color: #444;
-  background-color: hsl(0, 0%, 96%);
 }
 h1 {
   font-size: 1.8rem;
@@ -38,7 +37,7 @@ h1 {
       </div>
       <!--<div class="mx-auto text-center">
         <div class="text-2xl">漢字</div>
-        <div id="kanji" class="text-5xl"></div>
+        <div id="kanji" class="text-[20em]"></div>
       </div>-->
 
     </div>
