--- a/roulette.html
+++ b/roulette.html
@@ -37,7 +37,7 @@ h1 {
       </div>
       <!--<div class="mx-auto text-center">
         <div class="text-2xl">漢字</div>
-        <div id="kanji" class="text-[20em]"></div>
+        <div id="kanji" class="text-[300px]"></div>
       </div>-->
 
     </div>
