--- a/roulette.html
+++ b/roulette.html
@@ -33,11 +33,11 @@ h1 {
     <div>
       <div class="mx-auto text-center">
         <div class="text-2xl">記号</div>
-        <div id="kigo" class="text-9xl"></div>
+        <div id="kigo" class="text-[300px]"></div>
       </div>
       <!--<div class="mx-auto text-center">
         <div class="text-2xl">漢字</div>
-        <div id="kanji" class="text-[300px]"></div>
+        <div id="kanji" style="font-size: 300px"></div>
       </div>-->
 
     </div>
