Google翻訳の暴走抑制

--- a/code.html
+++ b/code.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-   <head>
+   <head lang="ja">
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, user-scalable=no" />
       <meta name="apple-mobile-web-app-capable" content="yes" />
